--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="ruban2.jpg" alt="Ruban profile" width="250" height="320"></td>
+      <td><img src="rubanpic.jpg" alt="Ruban profile" width="250" height="320"></td>
       <td><h1>RUBAN</h1>
       <p><em>founder and CEO of <strong>apple</strong></em></p>
       <p>I am an Engineer and Web Developer.I like coffee.</p></td>
